fix: color select illegible in dark mode #1693 (#1697)
Added a variable for changing the color of the palette title depending on theme selection to make it readable with the darker themes.

--- a/gui/scss/Light.scss
+++ b/gui/scss/Light.scss
@@ -45,6 +45,8 @@ $sort-tags-bg: #d3d3d3;
 
 $toggle-button-off-bg-color: #757373;
 
+$change-note-palette-title-color: $light-text-color;
+
 // Chat Window
 $chatWhisperColor: #c235ef;
 $chatTextColor: #000000;
